--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Meus estudos em:</h1>
     <hr/>
-    <h2> HTML CSS3 JAVASCRIPT</h2>
+    <h2> HTML CSS3 JAVASCRIPT PHP</h2>
     
 </body>
 </html>
